
- Fixed a stack overflow exception when using IsUnique inside a session scope.

- You can now apply IsUnique to a property that also has PrimaryKey on it without problem.

- Resolved IsUnique bug with ActiveRecordValidationBase<> (it was non functional)

- Resolved test bugs with IsUnique for .net 1 and .net 2.

- Added SimpleQuery<T>.Enumerate(), for use with large queries - .NET 2.0 only.

- Added ValidateCreditCard validation attribute.

- Added ValidateLength validation attribute.

- Added support for .Net 2.0 Connection Strings in the config file, using this method:

<activerecord>
	<add key="hibernate.connection.connection_string" value="ConnectionString = ${ConnectionStringKey}" />
</activerecord>

<connectionStrings>
	<add name="ConnectionStringKey" connectionString="The Connection String"/>
</connectionStrings>

This allows to take advantage of the connection string encryption as well as manage them using the built in tools.

- Added Exists<PkType>(PkType id) support to allow for checking of an object's existance 
  in the datastore.

- Brought ActiveRecordBase.Generic inline with ActiveRecordBase feature wise.  
  Public Static Methods are now present on all ActiveRecordBase.Generic objects for common tasks such as Find, FindAll, etc.

  <This is a breaking change.>
  
- Added support for NHibernate dynamic-update, dynamic-insert to ActiveRecordAttribute

- Simplified NHibernate markup generation for testing

  Attributes are now written in one of two ways. Tags that have both an open and close 
  will have no space at the end of the attributes on the opening tag, while tags that 
  have no contents (<tag />) will be written with one space after the last attribute.
  
  Examples:
  
  <openclose attrib="test" attrib2="test"></openclose>
  
  <noclosetag attrib="test"/>

- Added ActiveRecordValidationBase<> to support validation on Generic AR classes

- Updated DeleteAll(Type targetType, IEnumerable pkValues) to support non int primary keys
